tests/NormalTests/paczka1/fuzzy1/73762299.err
Error in line 4: I9f34FdYoU4 S387 11,5
Error in line 3: LkDPGe S593 6,0
Error in line 23: LkDPGe S387 370,45
Error in line 30: YF4 A48 6[,6
Error in line 15: LkDPGe S387 95,0
Error in line 31: LkDPGe S22 8,7
Error in line 22: I9f34FdYoU4 S593 236,2
